@@ -2,6 +2,9 @@ Package: QDNAseq
 ================
 
 Version: 0.6.3 [2014-01-25]
+o Added support for coercing an QDNAseqReadCounts object to an
+  CGHcall::cghRaw object via as(x, "cghRaw") and similar for coercing
+  to cghSeg and cghCall.
 o Added argument 'filter' to makeCgh() to control whether to drop
   "filtered" bins from the created object or not.
 o ROBUSTNESS: Now makeCgh() gives a more informative error message when
